# LU-ASR01

./: CMakeLists.txt  README.md  TurkishTTS.h  asr_pro_core.txt  asrprotest.c  build.bat  data-augmentation.h  notlar.md  tüm sohbet.md  yükleme talimatları.md
asr_pro_sdk/startup/: asrpro_init.c  asrpro_startup.S  asrpro_vtable.S
asr_pro_sdk/system/: asrpro_handlers.c  asrpro_it.c  asrpro_it.h  asrpro_system.c  asrpro_system.h  asrpro_system_ept.h  baudrate_calibrate.c  baudrate_calibrate.h  ci_assert.h  platform_config.c  platform_config.h  sdk_default_config.h
asr_pro_sdk/utils/: generate_makefile.lua
config/: plugin_config.json  sdk_test_config.json  test_config.json
docs/: changes.md  foldertree.md  plugin_roadmap.md  roadmap.md  talimatlar.md
examples/basic_recognition/: CMakeLists.txt  main.cpp
include/: sdk_integration.h
include/audio/: audio_processor.h  audio_types.h
include/benchmark/: benchmark_manager.h
include/core/: system_integrator.h
include/debug/: debug_manager.h  error_handler.h
include/hal/: hal_layer.h  rtos_wrapper.h
include/hardware/: bnpu_driver.h  dma_controller.h  esp32_interface.h  rpi_pico_interface.h  uart_controller.h  uart_interface.h
include_old/: asr_pro_debug.h  asr_pro_defines.h  asr_pro_integration.h  audio_data_augmentation.h  augmentation_manager.h  bnpu_core.h  text_data_augmentation.h  turkish_asr_plugin.cpp  turkish_asr_plugin.h  turkish_bnpu_config.h  turkish_model.h  turkish_quality_control.h  turkish_voice_system.h
src/: CMakeLists.txt
src/audio/: audio_processor.cpp
src/debug/: debug_manager.cpp  error_handler.cpp
src/hardware/: asrpro_uart.cpp  bnpu_driver.cpp  dma_controller.cpp
src/monitor/: performance_monitor.cpp
src/plugin/: plugin_integration.cpp  plugin_task.cpp  turkish_asr_plugin.cpp
src/turkish/: turkish_asr_optimizer.cpp  turkish_nlp.cpp  turkish_processor.cpp  turkish_pronunciation.cpp
tests/: CMakeLists.txt  test_config.json  test_framework.h  test_main.cpp
(+205 files in other folders)
